mid-second revision:

--- a/CBMC.ipynb
+++ b/CBMC.ipynb
@@ -2,15 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/home/ubuntu/dca/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/home/ubuntu/dca/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/home/ubuntu/dca/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/home/ubuntu/dca/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/home/ubuntu/dca/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/home/ubuntu/dca/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
      ]
     }
    ],
@@ -36,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"data/CBMC/\""
+    "data_path = \"../single-cell-scVI/data/CBMC/\""
    ]
   },
   {
@@ -141,14 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "expression_train = np.loadtxt(data_path + \"expression_train\")\n",
@@ -159,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,17 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
-      "Wall time: 4.09 ms\n",
-      "CPU times: user 1.37 s, sys: 0 ns, total: 1.37 s\n",
-      "Wall time: 424 ms\n"
+      "CPU times: user 8 ms, sys: 0 ns, total: 8 ms\n",
+      "Wall time: 4.26 ms\n",
+      "CPU times: user 1.85 s, sys: 8 ms, total: 1.86 s\n",
+      "Wall time: 517 ms\n"
      ]
     }
    ],
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,22 +223,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.098473750393067855, 7.2649)"
+       "(0.09741433511485353, 7.1975)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "score_latent(expression_train, n_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DCA: Successfully preprocessed 600 genes and 6462 cells.\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "count (InputLayer)              (None, 600)          0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "enc0 (Dense)                    (None, 64)           38464       count[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_4 (BatchNor (None, 64)           192         enc0[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "enc0_act (Activation)           (None, 64)           0           batch_normalization_4[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "center (Dense)                  (None, 10)           650         enc0_act[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_5 (BatchNor (None, 10)           30          center[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "center_act (Activation)         (None, 10)           0           batch_normalization_5[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "dec1 (Dense)                    (None, 64)           704         center_act[0][0]                 \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_6 (BatchNor (None, 64)           192         dec1[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "dec1_act (Activation)           (None, 64)           0           batch_normalization_6[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "mean (Dense)                    (None, 600)          39000       dec1_act[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "size_factors (InputLayer)       (None, 1)            0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "output (Lambda)                 (None, 600)          0           mean[0][0]                       \n",
+      "                                                                 size_factors[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "dispersion (Dense)              (None, 600)          39000       dec1_act[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "pi (Dense)                      (None, 600)          39000       dec1_act[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "slice (SliceLayer)              (None, 600)          0           output[0][0]                     \n",
+      "                                                                 dispersion[0][0]                 \n",
+      "                                                                 pi[0][0]                         \n",
+      "==================================================================================================\n",
+      "Total params: 157,232\n",
+      "Trainable params: 156,956\n",
+      "Non-trainable params: 276\n",
+      "__________________________________________________________________________________________________\n",
+      "Train on 5815 samples, validate on 647 samples\n",
+      "Epoch 1/300\n",
+      "5815/5815 [==============================] - 2s 421us/step - loss: 1.0271 - val_loss: 0.8667\n",
+      "Epoch 2/300\n",
+      "5815/5815 [==============================] - 1s 251us/step - loss: 0.8318 - val_loss: 0.8273\n",
+      "Epoch 3/300\n",
+      "5815/5815 [==============================] - 1s 252us/step - loss: 0.8111 - val_loss: 0.8118\n",
+      "Epoch 4/300\n",
+      "5815/5815 [==============================] - 1s 252us/step - loss: 0.8010 - val_loss: 0.8060\n",
+      "Epoch 5/300\n",
+      "5815/5815 [==============================] - 1s 254us/step - loss: 0.7961 - val_loss: 0.8039\n",
+      "Epoch 6/300\n",
+      "5815/5815 [==============================] - 1s 253us/step - loss: 0.7937 - val_loss: 0.8009\n",
+      "Epoch 7/300\n",
+      "5815/5815 [==============================] - 1s 253us/step - loss: 0.7915 - val_loss: 0.7985\n",
+      "Epoch 8/300\n",
+      "5815/5815 [==============================] - 1s 255us/step - loss: 0.7870 - val_loss: 0.7992\n",
+      "Epoch 9/300\n",
+      "5815/5815 [==============================] - 1s 254us/step - loss: 0.7817 - val_loss: 0.7984\n",
+      "Epoch 10/300\n",
+      "5815/5815 [==============================] - 1s 252us/step - loss: 0.7824 - val_loss: 0.7957\n",
+      "Epoch 11/300\n",
+      "5815/5815 [==============================] - 1s 253us/step - loss: 0.7799 - val_loss: 0.7921\n",
+      "Epoch 12/300\n",
+      "5815/5815 [==============================] - 1s 250us/step - loss: 0.7771 - val_loss: 0.7916\n",
+      "Epoch 13/300\n",
+      "5815/5815 [==============================] - 1s 251us/step - loss: 0.7792 - val_loss: 0.7918\n",
+      "Epoch 14/300\n",
+      "5815/5815 [==============================] - 1s 250us/step - loss: 0.7781 - val_loss: 0.7913\n",
+      "Epoch 15/300\n",
+      "5815/5815 [==============================] - 1s 251us/step - loss: 0.7766 - val_loss: 0.7915\n",
+      "Epoch 16/300\n",
+      "5815/5815 [==============================] - 1s 253us/step - loss: 0.7766 - val_loss: 0.7886\n",
+      "Epoch 17/300\n",
+      "5815/5815 [==============================] - 1s 247us/step - loss: 0.7732 - val_loss: 0.7908\n",
+      "Epoch 18/300\n",
+      "5815/5815 [==============================] - 1s 250us/step - loss: 0.7739 - val_loss: 0.7890\n",
+      "Epoch 19/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7728 - val_loss: 0.7906\n",
+      "Epoch 20/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7714 - val_loss: 0.7967\n",
+      "Epoch 21/300\n",
+      "5815/5815 [==============================] - 1s 250us/step - loss: 0.7726 - val_loss: 0.7876\n",
+      "Epoch 22/300\n",
+      "5815/5815 [==============================] - 1s 247us/step - loss: 0.7707 - val_loss: 0.7879\n",
+      "Epoch 23/300\n",
+      "5815/5815 [==============================] - 1s 246us/step - loss: 0.7710 - val_loss: 0.7885\n",
+      "Epoch 24/300\n",
+      "5815/5815 [==============================] - 1s 249us/step - loss: 0.7705 - val_loss: 0.7912\n",
+      "Epoch 25/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7714 - val_loss: 0.7896\n",
+      "Epoch 26/300\n",
+      "5815/5815 [==============================] - 1s 249us/step - loss: 0.7688 - val_loss: 0.7836\n",
+      "Epoch 27/300\n",
+      "5815/5815 [==============================] - 1s 247us/step - loss: 0.7672 - val_loss: 0.7832\n",
+      "Epoch 28/300\n",
+      "5815/5815 [==============================] - 1s 249us/step - loss: 0.7677 - val_loss: 0.7894\n",
+      "Epoch 29/300\n",
+      "5815/5815 [==============================] - 1s 247us/step - loss: 0.7673 - val_loss: 0.7886\n",
+      "Epoch 30/300\n",
+      "5815/5815 [==============================] - 1s 246us/step - loss: 0.7684 - val_loss: 0.7833\n",
+      "Epoch 31/300\n",
+      "5815/5815 [==============================] - 1s 249us/step - loss: 0.7659 - val_loss: 0.7830\n",
+      "Epoch 32/300\n",
+      "5815/5815 [==============================] - 1s 250us/step - loss: 0.7667 - val_loss: 0.7868\n",
+      "Epoch 33/300\n",
+      "5815/5815 [==============================] - 1s 245us/step - loss: 0.7658 - val_loss: 0.7827\n",
+      "Epoch 34/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7667 - val_loss: 0.7852\n",
+      "Epoch 35/300\n",
+      "5815/5815 [==============================] - 1s 246us/step - loss: 0.7678 - val_loss: 0.7874\n",
+      "Epoch 36/300\n",
+      "5815/5815 [==============================] - 1s 246us/step - loss: 0.7650 - val_loss: 0.7904\n",
+      "Epoch 37/300\n",
+      "5815/5815 [==============================] - 1s 250us/step - loss: 0.7656 - val_loss: 0.7879\n",
+      "Epoch 38/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7655 - val_loss: 0.7821\n",
+      "Epoch 39/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7657 - val_loss: 0.7869\n",
+      "Epoch 40/300\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5815/5815 [==============================] - 1s 245us/step - loss: 0.7646 - val_loss: 0.7853\n",
+      "Epoch 41/300\n",
+      "5815/5815 [==============================] - 1s 246us/step - loss: 0.7639 - val_loss: 0.7844\n",
+      "Epoch 42/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7644 - val_loss: 0.7863\n",
+      "Epoch 43/300\n",
+      "5815/5815 [==============================] - 1s 246us/step - loss: 0.7636 - val_loss: 0.7871\n",
+      "Epoch 44/300\n",
+      "5815/5815 [==============================] - 1s 246us/step - loss: 0.7646 - val_loss: 0.7844\n",
+      "Epoch 45/300\n",
+      "5815/5815 [==============================] - 1s 247us/step - loss: 0.7623 - val_loss: 0.7888\n",
+      "Epoch 46/300\n",
+      "5815/5815 [==============================] - 1s 247us/step - loss: 0.7632 - val_loss: 0.7854\n",
+      "Epoch 47/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7626 - val_loss: 0.7872\n",
+      "Epoch 48/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7622 - val_loss: 0.7794\n",
+      "Epoch 49/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7642 - val_loss: 0.7862\n",
+      "Epoch 50/300\n",
+      "5815/5815 [==============================] - 1s 246us/step - loss: 0.7622 - val_loss: 0.7884\n",
+      "Epoch 51/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7628 - val_loss: 0.7798\n",
+      "Epoch 52/300\n",
+      "5815/5815 [==============================] - 1s 246us/step - loss: 0.7634 - val_loss: 0.7862\n",
+      "Epoch 53/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7625 - val_loss: 0.7803\n",
+      "Epoch 54/300\n",
+      "5815/5815 [==============================] - 1s 247us/step - loss: 0.7627 - val_loss: 0.7820\n",
+      "Epoch 55/300\n",
+      "5815/5815 [==============================] - 1s 245us/step - loss: 0.7627 - val_loss: 0.7804\n",
+      "Epoch 56/300\n",
+      "5815/5815 [==============================] - 1s 245us/step - loss: 0.7598 - val_loss: 0.7830\n",
+      "Epoch 57/300\n",
+      "5815/5815 [==============================] - 1s 243us/step - loss: 0.7631 - val_loss: 0.7825\n",
+      "Epoch 58/300\n",
+      "5815/5815 [==============================] - 1s 246us/step - loss: 0.7613 - val_loss: 0.7881\n",
+      "\n",
+      "Epoch 00058: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+      "Epoch 59/300\n",
+      "5815/5815 [==============================] - 1s 247us/step - loss: 0.7585 - val_loss: 0.7802\n",
+      "Epoch 60/300\n",
+      "5815/5815 [==============================] - 1s 248us/step - loss: 0.7586 - val_loss: 0.7806\n",
+      "Epoch 61/300\n",
+      "5815/5815 [==============================] - 1s 245us/step - loss: 0.7572 - val_loss: 0.7811\n",
+      "Epoch 62/300\n",
+      "5815/5815 [==============================] - 1s 251us/step - loss: 0.7575 - val_loss: 0.7819\n",
+      "Epoch 63/300\n",
+      "5815/5815 [==============================] - 1s 246us/step - loss: 0.7577 - val_loss: 0.7798\n",
+      "Epoch 00063: early stopping\n",
+      "Calculating low dimensional representations...\n",
+      "Calculating reconstructions...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.11369852247733035, 8.2335)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dca.api import dca\n",
+    "import anndata\n",
+    "train = anndata.AnnData(expression_train)\n",
+    "res = dca(train, verbose=True, mode=\"latent\", hidden_size=(64, 10, 64))\n",
+    "latent = train.obsm['X_dca']\n",
+    "score_latent(latent, n_train)"
    ]
   },
   {
@@ -524,21 +739,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
